--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.11.3
+  image_picker: ^1.2.0
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
